# tests

./: .gitignore  .gitmodules  README.md  _config.yml  rag.md  st.sh
AI/: API.md  CLM.md  DeepSeek.html  DeepSeek.ipynb  DeepSeek.md  ImageNet.md  LLMs.md  MedBERT.md  MedMod.md  RAG-LangChain.md  (+21 more)
AI/pi-agent-project/: README.md  pyproject.toml  run.md
AI/pi-agent-project/.pi/agents/: coder.md  planner.md  qa.md
AI/pi-agent-project/agents/: coder.md  planner.md  qa.md
AI/pi-agent-project/csvstats/: __init__.py  __main__.py  cli.py  exceptions.py  reader.py  stats.py
AI/pi-agent-project/sessions/: 2026-04-20T15-17-10-938Z_019dab77-889a-7108-a76f-5831b64af6c8.jsonl  2026-04-20T16-32-19-939Z_019dabbc-55e2-70f9-a439-5d8798e7207b.jsonl
AI/pi-agent-project/sessions/2026-04-20T16-32-19-939Z_019dabbc-55e2-70f9-a439-5d8798e7207b/01068f39/run-0/: 2026-04-20T16-33-29-551Z_019dabbd-65ce-7123-a4c2-6057aeaa06c0.jsonl
AI/pi-agent-project/sessions/2026-04-20T16-32-19-939Z_019dabbc-55e2-70f9-a439-5d8798e7207b/01068f39/run-1/: 2026-04-20T16-34-23-424Z_019dabbe-383f-71ab-bdd9-81cc6a1d094e.jsonl
AI/pi-agent-project/sessions/2026-04-20T16-32-19-939Z_019dabbc-55e2-70f9-a439-5d8798e7207b/01068f39/run-2/: 2026-04-20T16-36-36-174Z_019dabc0-3ecd-745a-9b80-01fa96c5ba18.jsonl
AI/pi-agent-project/sessions/subagent-artifacts/: .last-cleanup  01068f39_coder_1_input.md  01068f39_coder_1_meta.json  01068f39_coder_1_output.md  01068f39_planner_0_input.md  01068f39_planner_0_meta.json  01068f39_planner_0_output.md  01068f39_qa_2_input.md  01068f39_qa_2_meta.json  01068f39_qa_2_output.md
(+390 files in other folders)
