[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csvstats"
version = "0.1.0"
description = "A CLI tool for calculating CSV column statistics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "CSV Stats Developer"},
]
keywords = ["csv", "statistics", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
csvstats = "csvstats.cli:main"

[project.urls]
Homepage = "https://github.com/example/csvstats"

[tool.hatch.build.targets.wheel]
packages = ["csvstats"]

[tool.hatch.build.targets.sdist]
include = [
    "/csvstats",
    "/README.md",
]
